<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kylewhite.moneymanagement_v2.add_expense"
    tools:showIn="@layout/activity_add_expense">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_expense" />

        <!-- expense name layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/etExpenseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_of_expense"
                android:inputType="textShortMessage"/>

        </LinearLayout>
        <!-- end expense name layout -->

        <!-- location layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location" />

            <Spinner
                android:id="@+id/spnLocation"
                style="?android:spinnerItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

        </LinearLayout>
        <!-- end location layout -->

        <!-- amount layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtExpenseAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"/>

            <EditText
                android:id="@+id/etExpenseAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Price of Expense"
                android:inputType="numberDecimal"/>

        </LinearLayout>
        <!-- end amount layout -->

        <!-- confirm buttons layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:weightSum="2">

            <Button
                android:id="@+id/btnExpenseCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btnExpenseSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit" />

        </LinearLayout>
        <!-- end confirm buttons layout -->

    </LinearLayout>

</RelativeLayout>
