<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kylewhite.moneymanagement_v2.transfer"
    tools:showIn="@layout/activity_transfer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transfer_bw_accts" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"> <!-- from account begin -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from" />

            <Spinner
                android:id="@+id/spnAccountTo"
                style="?android:spinnerItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

        </LinearLayout>
        <!-- end of from account -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"> <!-- transfer to this account -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to" />

            <Spinner
                android:id="@+id/spnAccountFrom"
                style="?android:spinnerItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

        </LinearLayout>
        <!-- end to account layout -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"> <!-- type of transfer -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <Spinner
                android:id="@+id/spnTransferType"
                style="?android:spinnerItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

        </LinearLayout>
        <!-- end type transfer layout -->


        <!-- frequency picker layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frequency" />

            <!-- day of week spinner -->
            <Spinner
                android:id="@+id/spnFrequency"
                style="?android:spinnerItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />
            <!-- end day of week spinner -->

        </LinearLayout>
        <!-- end frequency layout -->

        <!-- start date layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starting_date"/>

            <EditText
                android:id="@+id/etTransStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Date of first transfer"
                android:focusableInTouchMode="false"/>

        </LinearLayout>
        <!-- end start time layout -->

        <!-- end date layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ending_date"/>

            <EditText
                android:id="@+id/etTransEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Date of last transfer"
                android:focusableInTouchMode="false"/>

        </LinearLayout>
        <!-- end end time layout -->

        <!-- end amount layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"/>

            <EditText
                android:id="@+id/etAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Amount to transfer"
                android:inputType="numberDecimal"/>

        </LinearLayout>
        <!-- end amount layout -->

        <!-- confirm buttons layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:weightSum="2">

            <Button
                android:id="@+id/btnTransCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btnTransSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit" />

        </LinearLayout>
        <!-- end confirm buttons layout -->

    </LinearLayout>

</RelativeLayout>
