<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/very_dark_gray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kylewhite.moneymanagement_v2.add_bill"
    tools:showIn="@layout/activity_add_bill">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_bill"
            android:textColor="@color/ivory"/>

        <!-- bill name layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/ivory"
                android:textSize="20sp"
                android:fontFamily="sans-serif-thin" />

            <EditText
                android:id="@+id/etBillName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_of_bill"
                android:textColor="@color/ivory"
                android:textColorHint="@color/dollar_bill_primary"
                android:textSize="20sp"
                android:fontFamily="sans-serif-thin"
                android:inputType="textShortMessage"/>

        </LinearLayout>
        <!-- end bill name layout -->

        <!-- location layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"> <!-- Bill this account -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/billing_account"
                android:textColor="@color/ivory"
                android:textSize="20sp"
                android:fontFamily="sans-serif-thin"/>

            <Spinner
                android:id="@+id/spnBillingAccount"
                style="?android:spinnerItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

        </LinearLayout>
        <!-- end location layout -->
<!--

         frequency picker layout
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frequency" />

             day of week spinner
            <Spinner
                android:id="@+id/spnFrequency"
                style="?android:spinnerItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />
             end day of week spinner

        </LinearLayout>
         end frequency layout

         start date layout
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starting_date"/>

            <EditText
                android:id="@+id/etBillStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Beginning billing date"/>
                //android:focusableInTouchMode="false"

        </LinearLayout>
         end start time layout

         end date layout
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ending_date"/>

            <EditText
                android:id="@+id/etBillEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Final billing date"/>
                android:focusableInTouchMode="false"/>

        </LinearLayout>
         end end date layout
-->

        <!-- amount layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textColor="@color/ivory"
                android:textSize="20sp"
                android:fontFamily="sans-serif-thin"/>

            <EditText
                android:id="@+id/etAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Amount of Bill"
                android:textColor="@color/ivory"
                android:textColorHint="@color/ivory"
                android:textSize="20sp"
                android:fontFamily="sans-serif-thin"/>

        </LinearLayout>
        <!-- end amount layout -->

        <!-- confirm buttons layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:weightSum="2">

            <Button
                android:id="@+id/btnBillCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btnBillSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit" />

        </LinearLayout>
        <!-- end confirm buttons layout -->

    </LinearLayout>

</RelativeLayout>
