<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/very_dark_gray"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kylewhite.moneymanagement_v2.viewBill"
    tools:showIn="@layout/activity_view_bill">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvVBBillName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/ivory"
                    android:fontFamily="sans-serif-thin"
                    android:layout_weight="0.5"/>

                <TextView
                    android:id="@+id/tvVBAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_weight="0.5"
                    android:textColor="@color/ivory"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="end"/>

                <!-- using gravity end instead of right because in sdk above 17, android can use
                     a right-to-left implementation.  If this is the case, the formatting of each
                     view will be inconsistent across multiple platforms.  Using end prevents
                     these inconsistencies. -->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_payment_date"
                    android:layout_weight="0.5"
                    android:textColor="@color/ivory"
                    android:fontFamily="sans-serif-thin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_date"
                    android:layout_weight="0.5"
                    android:textColor="@color/ivory"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="end"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/billing_account"
                    android:layout_weight="0.5"
                    android:textColor="@color/ivory"
                    android:fontFamily="sans-serif-thin"/>

                <TextView
                    android:id="@+id/tvVBAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textColor="@color/ivory"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="end" />

            </LinearLayout>

        </LinearLayout>

        <ListView
            android:id="@+id/lvVBUpcomingBills"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>

    </LinearLayout>

</RelativeLayout>
